[package]
name = "cert-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = "0.23.23"
tokio = {version = "1.44.0", features = ["full"]}
tokio-rustls = "0.26.2"
warp = {version = "0.3.7", features = ["tls"]}
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
warp-reverse-proxy = { git = "https://github.com/b-runz/warp-reverse-proxy.git", version = "1.0.0" }
